[gd_scene load_steps=24 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://dog_lean.shader" type="Shader" id=2]
[ext_resource path="res://dog1.png" type="Texture" id=3]
[ext_resource path="res://dog 2.png" type="Texture" id=4]
[ext_resource path="res://attack1.png" type="Texture" id=5]
[ext_resource path="res://attack2.png" type="Texture" id=6]
[ext_resource path="res://playersleep1.png" type="Texture" id=7]
[ext_resource path="res://playersleep2.png" type="Texture" id=8]
[ext_resource path="res://Camera2D.gd" type="Script" id=9]
[ext_resource path="res://cave_background.png" type="Texture" id=10]
[ext_resource path="res://dust.tscn" type="PackedScene" id=11]
[ext_resource path="res://lightmap.png" type="Texture" id=12]
[ext_resource path="res://hearts.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/run_state = 0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "sprint",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "sleep",
"speed": 2.0
} ]

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void fragment() {

	vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;
	c = vec3(1.0) - c;
	COLOR.rgb = c;
}"

[sub_resource type="ShaderMaterial" id=6]
render_priority = 10
shader = SubResource( 5 )

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 7.68
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
angular_velocity = -1.10025e+11
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 9 )
anim_speed = 1.0

[node name="Dog" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.04108, 1.01424 )
shape = SubResource( 1 )

[node name="dogsprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
frames = SubResource( 3 )
playing = true
flip_h = true

[node name="spin" type="AnimationPlayer" parent="dogsprite"]
autoplay = "double jump"
"anims/double jump" = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
material = SubResource( 6 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -180
limit_top = -270
limit_right = 1000
limit_bottom = 90
editor_draw_limits = true
script = ExtResource( 9 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -40, 20 )
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 320, 240 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
visible = false
texture = ExtResource( 10 )
centered = false

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2( -0.297, -0.13 )
z_as_relative = false
enabled = true
cast_to = Vector2( 11, 0 )
collide_with_areas = true

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2( -0.297073, -0.132568 )
z_as_relative = false
enabled = true
cast_to = Vector2( -11, 0 )
collide_with_areas = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 11.1682, 0.115982 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0

[node name="Particles2D" parent="." instance=ExtResource( 11 )]
show_behind_parent = true
position = Vector2( 0.67757, 7.63728 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 12 )
texture_scale = 4.6
energy = 1.3
shadow_color = Color( 0, 0, 0, 0.996078 )

[node name="Particles2D2" type="Particles2D" parent="."]
material = SubResource( 7 )
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 10 )
texture = ExtResource( 13 )
[connection signal="animation_finished" from="dogsprite" to="." method="_on_dogsprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
